<resources>
    <string name="app_name">MercadoLibre</string>

    <string name="installment">Cuotas</string>
    <string name="card_issuers">Banco</string>
    <string name="payment_method">Medio de pago</string>
    <string name="amount">Monto</string>
    <string name="summary">Resumen</string>
    <string name="card_issuers_title">Selección del banco</string>
    <string name="installment_title">Selección de cuotas</string>
    <string name="enter_amount">Ingrese el monto a pagar</string>
    <string name="next">Continuar</string>
    <string name="payment_method_title">Medio de pago</string>
    <string name="error_must_enter_a_value">Debe ingresar un valor</string>
    <string name="error_value_must_be_greather_than_cero">Debe ingresar un valor mayor a 0</string>
    <string name="error_is_not_a_number">El texto ingresado no es un número</string>
    <string name="no_network_description">Debe conectarse a internet para obtener la información</string>
    <string name="no_network_title">Sin conexión</string>
    <string name="go_back">Volver</string>
    <string name="no_data">No existen datos</string>
    <string name="no_data_from_request">No se pudo obtener la información</string>
    <string name="loading">Cargando...</string>
</resources>
