<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".errors.NetworkErrorActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/ic_noconnection" />


    <TextView
        android:id="@+id/no_connection_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/no_network_title"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/no_connection_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/no_connection_title"
        android:layout_gravity="center_horizontal"
        android:text="@string/no_network_description"
        android:textAlignment="center"
        android:textSize="14sp" />

    <Button
        android:id="@+id/no_connection_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/go_back" />

</RelativeLayout>